fixed issue with filter overlapping footer and changed social section up a bit

--- a/_sass/_section.scss
+++ b/_sass/_section.scss
@@ -2,6 +2,7 @@
     display: flex;
     width: 1000px;
     margin:0 auto;
+    min-height: 450px;
 }
 
 .section-filter {
