--- a/_sass/_staffPick.scss
+++ b/_sass/_staffPick.scss
@@ -113,6 +113,7 @@
 
 .social {
     display:flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     max-width: 400px;
@@ -159,12 +160,6 @@
             }
         }
     }
-    .social {
-        flex-direction: column;
-        text-align: center;
-        &-item {
-            margin:10px 0;
-        }
     }
-}
+
 
